@@ -1,11 +1,11 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin snit n 2.2.4]
-[copyright {2003-2006, by William H. Duquette}]
+[manpage_begin snit n 2.3]
+[copyright {2003-2009, by William H. Duquette}]
 [moddesc {Snit's Not Incr Tcl, OO system}]
 [titledesc  {Snit's Not Incr Tcl}]
 [category  {Programming tools}]
 [require Tcl 8.5]
-[require snit [opt 2.2.4]]
+[require snit [opt 2.3]]
 [description]
 [para]
 
